# agents

./: .gitignore
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  5_extra.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb
3_crew/my_coder/: pyproject.toml
3_crew/my_coder/output/: code_and_output.py
3_crew/my_coder/src/my_coder/: crew.py  main.py
3_crew/my_coder/src/my_coder/config/: tasks.yaml
3_crew/my_debate/: pyproject.toml
3_crew/my_debate/output/: decide.md  oppose.md  propose.md
3_crew/my_debate/src/my_debate/: crew.py  main.py
3_crew/my_debate/src/my_debate/config/: agents.yaml
3_crew/my_financial_researcher/: README.md  pyproject.toml
3_crew/my_financial_researcher/output/: "DXC Luxoft"_2026-02-03_14-00_report.md  DXC Luxoft_report_2026-02-03T14:34:32.md  DXC Luxoft_report_2026-02-03T14:36:54.md  EPAM_report_2026-02-02T11:06:14.md  report2021.md  report2023.md
3_crew/my_financial_researcher/src/my_financial_researcher/: crew.py  main.py
3_crew/my_stock_picker/: pyproject.toml
3_crew/my_stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/my_stock_picker/output/: decision-1.md  decision.md  research_report-1.md  research_report.md  trending_companies-1.md  trending_companies.md
3_crew/my_stock_picker/src/my_stock_picker/: crew.py  main.py
3_crew/my_trending_products/: README.md  pyproject.toml
3_crew/my_trending_products/src/my_trending_products/: crew.py  main.py
3_crew/my_trending_products/src/my_trending_products/config/: agents.yaml  tasks.yaml
(+3 files in other folders)
