[project]
name = "my_trending_products"
version = "0.1.0"
description = "Find trending AI/SaaS products and ideas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2"
]

[project.scripts]
my_trending_products = "my_trending_products.main:run"
run_crew = "my_trending_products.main:run"
train = "my_trending_products.main:train"
replay = "my_trending_products.main:replay"
test = "my_trending_products.main:test"
run_with_trigger = "my_trending_products.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
